--- a/app/src/main/res/layout/view_suspender_justificar.xml
+++ b/app/src/main/res/layout/view_suspender_justificar.xml
@@ -1,4 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
+<ScrollView
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:fillViewport="true">
+
+
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -77,6 +86,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/dtp_Fin"
         android:layout_alignParentEnd="true"
+        android:layout_marginTop="22dp"
         android:backgroundTint="#1A8AF9"
         android:text="Siguiente" />
 
@@ -86,7 +96,7 @@
             android:layout_height="wrap_content"
             android:layout_below="@+id/dtp_Fin"
             android:textColor="#1A8AF9"
-            android:layout_marginTop="15dp"
+            android:layout_marginTop="10dp"
             android:textSize="14dp"
             android:textStyle="bold"
             android:text="Ver historial del alumno"/>
@@ -95,3 +105,4 @@
 </RelativeLayout>
 
 </RelativeLayout>
+</ScrollView>
